[package]
name = "actix-web-sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.20"
tokio = {  version = "1", features = ["sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
